Deleted data related to current password
